# magic-cp

./: .gitignore  .stylish-haskell.yaml  MagicCP.cabal  MagicCP.hs  README.md  lint.sh  package.yaml  results1  setup-dev.sh  stack.yaml
.stack-work-profile/install/x86_64-linux-tinfo6/8fc8caea414359769f7b15d8182817c379fb0c5c422d55c378c65c466bebeb99/8.6.5/lib/x86_64-linux-ghc-8.6.5/MagicCP-0.0.0-EJsPq9NwXAT3GD2GoLyR2D/: CF.p_hi  MagicCP.p_hi
.stack-work-profile/install/x86_64-linux-tinfo6/8fc8caea414359769f7b15d8182817c379fb0c5c422d55c378c65c466bebeb99/8.6.5/lib/x86_64-linux-ghc-8.6.5/MagicCP-0.0.0-EJsPq9NwXAT3GD2GoLyR2D/CF/: CFAPI.p_hi  CFConfig.p_hi  CFHTML.p_hi
.stack-work-profile/install/x86_64-linux-tinfo6/8fc8caea414359769f7b15d8182817c379fb0c5c422d55c378c65c466bebeb99/8.6.5/pkgdb/: MagicCP-0.0.0-EJsPq9NwXAT3GD2GoLyR2D.conf  MagicHaskeller-0.9.6.7-FA7nDfu4cBm2jkqS1ZXfL4.conf  package.cache
CF/: CF.hs
CF/CF/: CFAPI.hs  CFConfig.hs  CFToolWrapper.hs  Config.hs
CF/exampleSolutions/1030/: a.hs
MagicHaskeller/: MagicHaskeller.cabal  MagicHaskeller.hs  typesystem.hs
MagicHaskeller/Control/Monad/Search/: Best.hs  Combinatorial.hs  Combinatorial.lhs
MagicHaskeller/MagicHaskeller/: ClassLib.lhs  Classify.hs  ClassifyDM.hs  CoreLang.hs  DebMT.lhs  ExecuteAPI610.hs  Expression.hs  FMType.lhs  IOGenerator.hs  Instantiate.hs  LibExcel.hs  LibTH.hs  LibTHDefinitions.hs  MHTH.lhs  MyDynamic.hs  Options.hs  PolyDynamic.hs  PriorSubsts.hs  ProgGen.hs  ProgGenSF.lhs  ProgGenSFIORef.lhs  ProgramGenerator.hs  ReadHsType.hs  ReadTHType.hs  ReadTHType.lhs  ReadTypeRep.hs  ShortString.hs  SimpleServer.hs  TimeOut.hs  TyConLib.hs  Types.hs
MagicHaskeller/MagicHaskeller/Analytical/: FMExpr.hs  Synthesize.hs
MagicHaskeller/NotUsed/: Best.hs  ClassifyTr.hs  GetTime.hs  Individual.hs  LibExcel.hs  LibExcelStaged.hs  Minimal.hs
exampleSolutions/1030/: a.hs
exe/: Main.hs
logs/: 2019-11-13-21:18:17-1186a  2019-11-13-21:23:52-1186a  2019-11-13-21:31:28-1186a  2019-11-13-21:35:29-1186a  2019-11-13-22:20:15-1030a  2019-11-13-22:20:31-1030a  2019-11-13-22:21:13-1030a  2019-11-13-22:22:45-1030a  2019-11-13-22:26:42-705a  2019-11-14-20:30:57-705a  2019-11-14-20:32:02-705a  2019-11-14-20:34:57-705a  2019-11-14-21:03:57-705a  2019-11-14-21:32:36-705a  2019-11-14-21:37:14-705a  2019-11-14-21:40:38-705a  2019-11-14-21:43:27-705a  2019-11-14-22:03:49-705a  2019-11-14-22:19:27-110a  2019-11-14-22:23:43-110a  2019-11-14-22:25:10-110a  2019-11-14-22:26:42-110a  2019-11-14-23:01:37-110a  2019-11-14-23:46:52-110a  2019-11-15-20:01:26-1186a  2019-11-15-20:03:41-1186a  2019-11-15-20:10:41-1186a  2019-11-15-20:14:46-1186a  2019-11-15-20:17:24-1186a  2019-11-15-20:23:49-1186a  2019-11-15-20:33:33-1186a  2019-11-15-20:54:25-1186a  2019-11-15-20:59:41-1186a  2019-11-15-20:59:56-1186a  2019-11-15-21:04:24-1186a  2019-11-15-21:10:05-1186a  2019-11-15-21:12:17-1186a  2019-11-15-21:13:42-1186a  2019-11-15-22:08:13-1186a  2019-11-15-22:11:15-1186a  (+222 more)
scripts/: generate-cfg.sh  sel.py
src/: CF.hs  MagicCP.hs
src/CF/: CFAPI.hs  CFConfig.hs  CFHTML.hs  CFToolWrapper.hs
src/MagicCP/: ParseInputOutput.hs  ParserDefinitions.hs  SearchOptions.hs
src/MagicCP/Util/: ExpressionCnt.hs  Logger.hs  Memory.hs  Timer.hs
