Name:            MagicHaskeller
Version:         0.9.6.7
Cabal-Version:   >= 1.8
License:         BSD3
License-file:    LICENSE
Author:          Susumu Katayama
Maintainer:      Susumu Katayama <skata@cs.miyazaki-u.ac.jp>
Stability:       experimental
Homepage:        http://nautilus.cs.miyazaki-u.ac.jp/~skata/MagicHaskeller.html
bug-reports:     mailto:skata@cs.miyazaki-u.ac.jp
Synopsis:        Automatic inductive functional programmer by systematic search
Description:     MagicHaskeller is an inductive functional programming system for Haskell.
     This package contains the MagicHaskeller library, which can be used within GHCi or as an API for inductive program synthesis.
     It also contains the MagicHaskeller executable that is a standalone synthesis program which can be used interactively or as a backend server,
     and the MagicHaskeller.cgi executable that is a CGI frontend for providing the Web interface.
Build-Type:      Simple
Category:        Language
-- data-files:      ExperimIOP.hs MagicHaskeller/predicates MagicHaskeller/predicatesAug2014 MagicHaskeller.conf MagicHaskeller/predicatesServed primitives.txt
Extra-source-files: changelog.txt
Tested-with:     GHC == 7.6.3, GHC == 7.10.3, GHC == 8.0.2

Flag TFRANDOM
  Description: Use the tf-random package instead of the random package
  Default:     True

Flag GHCAPI
  Description: Enable execution using the GHC API rather than the combinatory interpreter
  Default:     True

Flag READFILE
  Description: Enable to read a component library file
  Default:     True

Flag DEBUG
  Description: Force typechecking at each dynamic application
  Default:     True


-- Flag ForcibleTO
-- Flag Debug
-- Flag Benchmark

Library
  Build-depends: array
               , base >= 4 && < 5
               , bytestring
               , containers
               , directory
               , hashable
               , mtl
               , pretty
               , random
               , syb
               , template-haskell
               , time
  Exposed-modules: Control.Monad.Search.Combinatorial
                 , MagicHaskeller
                 , MagicHaskeller.ProgramGenerator
                 , MagicHaskeller.ProgGen
                 , MagicHaskeller.ProgGenSF
                 , MagicHaskeller.ProgGenSFIORef
                 , MagicHaskeller.Expression
                 , MagicHaskeller.LibTH
                 , MagicHaskeller.LibTHDefinitions
                 , MagicHaskeller.Options
                 , MagicHaskeller.Classification
                 , MagicHaskeller.FastRatio
                 , MagicHaskeller.CoreLang
                 , MagicHaskeller.PolyDynamic
                 , MagicHaskeller.Instantiate
                 , MagicHaskeller.TimeOut
  Other-modules: MagicHaskeller.MemoToFiles
               , MagicHaskeller.ShortString
               , MagicHaskeller.Types
               , MagicHaskeller.PriorSubsts
               , Data.Memo
               , MagicHaskeller.DebMT
               , MagicHaskeller.TyConLib
               , MagicHaskeller.FakeDynamic
               , MagicHaskeller.ReadTypeRep
               , MagicHaskeller.ReadTHType
               , MagicHaskeller.Execute
               , MagicHaskeller.T10
               , MagicHaskeller.Classify
               , MagicHaskeller.MHTH
               , MagicHaskeller.MyCheck
               , MagicHaskeller.ExprStaged
               , MagicHaskeller.Combinators
               , MagicHaskeller.ReadDynamic
               , MagicHaskeller.MyDynamic
               , MagicHaskeller.ClassifyDM
               , MagicHaskeller.FMType
               , MagicHaskeller.NearEq
               , MagicHaskeller.ClassLib
  Extensions:    CPP, TemplateHaskell
  cpp-options:   -DCHTO -DCABAL

  if flag(TFRANDOM)
    Build-depends:   tf-random <= 0.3 || >= 0.5
    cpp-options:     -DTFRANDOM


  if flag(READFILE)
    Build-depends:   haskell-src
    cpp-options:     -DHASKELLSRC
    Other-modules:   MagicHaskeller.ReadHsType

  if flag(DEBUG)
    cpp-options:     -DREALDYNAMIC

